--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <script src='app.js' async></script>
-    <body>
+    <body  onload = 'drawMandelbrot()'>
         <canvas id='mandelbrotCanvas' height='800' width='800'></canvas>
     </body>
 </html>
