--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-<script src='app.js' async></script>
-<link rel="stylesheet" href="style.css">
 
 <body onload='onBodyLoad()'>
 <div id="main_container">
@@ -43,5 +41,10 @@
 </div>
 </div>
 </body>
+<script src='src/dom-handling.js' async></script>
+<script src='src/color-scheme.js' async></script>
+<script src='src/color-utilities.js' async></script>
+<script src='src/app.js' async></script>
+<link rel="stylesheet" href="style.css">
 
 </html>
