--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
                     <option value="without_smoothing">Without Smoothing</option>
                     <option value="with_smoothing">With Smoothing</option>
                     <option value="something_beautiful">Something Beautiful</option>
-                    <option value="surprise_me">Surprise Me!</option>
+                    <option value="surprise_me">Surprise Me!*</option>
                 </select></td>
             </tr>
         </table>
     
         <button type='button' onclick='drawMandelbrotButtonPressed()'>Draw Mandelbrot</button>
+        <div id ="disclaimer">*You may have to try multiple times for good results in <b>Surprise Me</b> Option</div>
 </div>
 
 <div id="canvas_container">
